--- a/USTHWeather/app/src/main/res/values/strings.xml
+++ b/USTHWeather/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="todo" translatable="false">TODO</string>
     <string name="play" translatable="false">PLAY</string>
     <string name="paris" translatable="false">Paris</string>
+    <string name="refresh" translatable="false">Refresh</string>
+    <string name="settings" translatable="false">Settings</string>
+    <string name="well_it_s_actually_an_activity" translatable="false">Well it\'s actually an activity</string>
 </resources>
